--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 # This file lists all contributors to this repository
 Ajadi Marvellous Oladayo <ajadimarvellousgo@gmail.com>
-Asiwaju Ifeoluwa <Ifeasiwaju@gmail.com>
+Odediran Philip Oluseyi <philipoluseyi@gmail.com>
